--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   get: ^4.6.6
   collection: ^1.18.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
