--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get: ^4.6.6
   collection: ^1.18.0
   dropdown_button2: ^2.3.9
+  popover: ^0.3.0+1
 
 dev_dependencies:
   flutter_test:
